[tool.poetry]
name = "exenenv"
version = "1.0"
description = "Environment variables verifier and type converter."
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.11.4"
black = "^22.12.0"
ruff = "^0.0.191"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["src/exenenv/__init__.py"]

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
